# models

squeezenet-burn/: Cargo.toml  build.rs
squeezenet-burn/examples/: classify.rs
squeezenet-burn/src/model/: label.rs  squeezenet1.rs
