[package]
authors = ["Dilshod Tadjibaev (@antimora)"]
license = "MIT OR Apache-2.0"
name = "squeezenet-burn"
version = "0.1.0"
edition = "2021"

[features]
default = ["rebuild", "weights_file"]

# Enables Half precision (f16) support
weights_f16 = []

# Embed weights into the binary
weights_embedded = []

# Use weights from a file
weights_file = ["burn/default"]

# Refresh model
rebuild = ["burn-import"]

[dependencies]

# Note: default-features = false is needed to disable std
burn = { version = "0.13.0", default-features = false }

# Used to load weights from a file
serde = { version = "1.0.183", default-features = false, features = [
    "derive",
    "alloc",
] } # alloc is for no_std, derive is needed

[dev-dependencies]
# Used by the classify example
burn = { version = "0.13.0", features = ["ndarray"] }
image = { version = "0.24.7", features = ["png", "jpeg"] }

[build-dependencies]
burn-import = { version = "0.13.2", package = "burn-import", optional = true }
